--- a/branch1.html
+++ b/branch1.html
@@ -4,6 +4,8 @@
     <title>Afaq</title>
     <body>
         <p>branch one test</p>
+        <p>branch 1 test 2</p>
+        <p>branch test 3</p>
        
     </body>
 
